fix behavior issue on iphone x looks fine when inspected and still jumps on phone this should correct the issue

--- a/src/App.css
+++ b/src/App.css
@@ -1448,7 +1448,6 @@ body {
     #roundimg {
       width: 40em;
       height: auto;
-      margin-top: 2em;
     }
 
     * {
@@ -1685,7 +1684,6 @@ body {
     #roundimg {
       width: 40em;
       height: auto;
-      margin-top: 2em;
     }
 
     * {
@@ -1838,7 +1836,6 @@ body {
     #roundimg {
       width: 40em;
       height: auto;
-      margin-top: 2em;
     }
 
     * {
@@ -1994,7 +1991,6 @@ body {
     #roundimg {
       width: 40em;
       height: auto;
-      margin-top: 2em;
     }
 
     * {
@@ -2163,7 +2159,6 @@ body {
     #roundimg {
       width: 40em;
       height: auto;
-      margin-top: 2em;
     }
 
     * {
@@ -2317,7 +2312,6 @@ body {
     #roundimg {
       width: 40em;
       height: auto;
-      margin-top: 2em;
     }
 
     * {
